加了一个工具类和短信类

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -12,20 +12,36 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--Memcached 地址配置-->
     <add key="MemcachedServerList" value="127.0.0.1:11111"/>
+
+    <!--腾讯云万彩吧短信 地址配置-->
+    <add key="sdkappid" value="1400040575"/>
+    <add key="appkey" value="eb5005910142d1edbb20baddd0e8ca08"/>
+    
+
   </appSettings>
 
 
   <connectionStrings>
     <!--<add name="connStr" connectionString="Data Source=119.147.139.131;Initial Catalog=C8;User ID=sa;Password=sql1994;" />-->
 
-    <add name="connStr" connectionString="Data Source=127.0.0.1;Initial Catalog=C8;User ID=sa;Password=luohongshun;" />
+    <add name="connStr" connectionString="Data Source=127.0.0.1;Initial Catalog=C8;User ID=sa;Password=123456;" />
 
   </connectionStrings>
 
-
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json"
+            publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 
   <system.web>
+   
     <httpRuntime targetFramework="4.5" />
+
     <compilation debug="true" targetFramework="4.5" />
     <pages>
       <namespaces>
