--- a/C8.Lottery.Public/C8.Lottery.Public.csproj
+++ b/C8.Lottery.Public/C8.Lottery.Public.csproj
@@ -30,14 +30,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ICSharpCode.SharpZipLib">
-      <HintPath>..\..\..\..\vs2012Project\ShenZhen\packages\Memcached\ICSharpCode.SharpZipLib.dll</HintPath>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=0.84.0.0, Culture=neutral, PublicKeyToken=1b03e6acf1164f73">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
-    <Reference Include="log4net">
-      <HintPath>..\..\..\..\vs2012Project\ShenZhen\packages\Memcached\log4net.dll</HintPath>
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="Memcached.ClientLibrary">
-      <HintPath>..\..\..\..\vs2012Project\ShenZhen\packages\Memcached\Memcached.ClientLibrary.dll</HintPath>
+    <Reference Include="Memcached.ClientLibrary, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Memcached.ClientLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -53,7 +59,9 @@
     <Compile Include="LogerFactory.cs" />
     <Compile Include="LogHelper.cs" />
     <Compile Include="MemClientFactory.cs" />
+    <Compile Include="Tool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmsSender.cs" />
     <Compile Include="SqlHelper.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
