--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -11,11 +11,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--Memcached 地址配置-->
-    <add key="MemcachedServerList" value="127.0.0.1:11111"/>
+    <add key="MemcachedServerList" value="127.0.0.1:11111" />
 
     <!--腾讯云万彩吧短信 地址配置-->
-    <add key="sdkappid" value="1400040575"/>
-    <add key="appkey" value="eb5005910142d1edbb20baddd0e8ca08"/>
+    <add key="sdkappid" value="1400040575" />
+    <add key="appkey" value="eb5005910142d1edbb20baddd0e8ca08" />
     
 
   </appSettings>
@@ -24,16 +24,15 @@
   <connectionStrings>
     <!--<add name="connStr" connectionString="Data Source=119.147.139.131;Initial Catalog=C8;User ID=sa;Password=sql1994;" />-->
 
-    <add name="connStr" connectionString="Data Source=127.0.0.1;Initial Catalog=C8;User ID=sa;Password=123456;" />
+    <add name="connStr" connectionString="Data Source=127.0.0.1;Initial Catalog=C8;User ID=sa;Password=luohongshun;" />
 
   </connectionStrings>
 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json"
-            publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
