--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -405,6 +405,7 @@
     <Content Include="js\function.js" />
     <Content Include="js\jquery-1.8.3.min.js" />
     <Content Include="css\dropload.css" />
+    <Content Include="js\jquery.js" />
     <Content Include="js\luo\dropload.js" />
     <Content Include="js\luo\dropload.min.js" />
     <Content Include="js\luo\jQuery.Form.js" />
@@ -448,6 +449,7 @@
     <Content Include="Views\Personal\SetAutograph.cshtml" />
     <Content Include="Views\Personal\SetSex.cshtml" />
     <Content Include="Views\Personal\Set.cshtml" />
+    <Content Include="Views\Personal\Task.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
