--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -25,7 +25,7 @@
   <connectionStrings>
     <!--<add name="connStr" connectionString="Data Source=119.147.139.131;Initial Catalog=C8;User ID=sa;Password=sql1994;" />-->
 
-    <add name="connStr" connectionString="Data Source=127.0.0.1;Initial Catalog=C8;User ID=sa;Password=123456;" />
+    <add name="connStr" connectionString="Data Source=127.0.0.1;Initial Catalog=C8;User ID=sa;Password=luohongshun;" />
 
   </connectionStrings>
 
