--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -290,6 +290,147 @@
     <Content Include="images\bt-5.png" />
     <Content Include="images\bt-6.png" />
     <Content Include="images\default_avater.png" />
+    <Content Include="images\emoji\qq\1.gif" />
+    <Content Include="images\emoji\qq\10.gif" />
+    <Content Include="images\emoji\qq\11.gif" />
+    <Content Include="images\emoji\qq\12.gif" />
+    <Content Include="images\emoji\qq\13.gif" />
+    <Content Include="images\emoji\qq\14.gif" />
+    <Content Include="images\emoji\qq\15.gif" />
+    <Content Include="images\emoji\qq\16.gif" />
+    <Content Include="images\emoji\qq\17.gif" />
+    <Content Include="images\emoji\qq\18.gif" />
+    <Content Include="images\emoji\qq\19.gif" />
+    <Content Include="images\emoji\qq\2.gif" />
+    <Content Include="images\emoji\qq\20.gif" />
+    <Content Include="images\emoji\qq\21.gif" />
+    <Content Include="images\emoji\qq\22.gif" />
+    <Content Include="images\emoji\qq\23.gif" />
+    <Content Include="images\emoji\qq\24.gif" />
+    <Content Include="images\emoji\qq\25.gif" />
+    <Content Include="images\emoji\qq\26.gif" />
+    <Content Include="images\emoji\qq\27.gif" />
+    <Content Include="images\emoji\qq\28.gif" />
+    <Content Include="images\emoji\qq\29.gif" />
+    <Content Include="images\emoji\qq\3.gif" />
+    <Content Include="images\emoji\qq\30.gif" />
+    <Content Include="images\emoji\qq\31.gif" />
+    <Content Include="images\emoji\qq\32.gif" />
+    <Content Include="images\emoji\qq\33.gif" />
+    <Content Include="images\emoji\qq\34.gif" />
+    <Content Include="images\emoji\qq\35.gif" />
+    <Content Include="images\emoji\qq\36.gif" />
+    <Content Include="images\emoji\qq\37.gif" />
+    <Content Include="images\emoji\qq\38.gif" />
+    <Content Include="images\emoji\qq\39.gif" />
+    <Content Include="images\emoji\qq\4.gif" />
+    <Content Include="images\emoji\qq\40.gif" />
+    <Content Include="images\emoji\qq\41.gif" />
+    <Content Include="images\emoji\qq\42.gif" />
+    <Content Include="images\emoji\qq\43.gif" />
+    <Content Include="images\emoji\qq\44.gif" />
+    <Content Include="images\emoji\qq\45.gif" />
+    <Content Include="images\emoji\qq\46.gif" />
+    <Content Include="images\emoji\qq\47.gif" />
+    <Content Include="images\emoji\qq\48.gif" />
+    <Content Include="images\emoji\qq\49.gif" />
+    <Content Include="images\emoji\qq\5.gif" />
+    <Content Include="images\emoji\qq\50.gif" />
+    <Content Include="images\emoji\qq\51.gif" />
+    <Content Include="images\emoji\qq\52.gif" />
+    <Content Include="images\emoji\qq\53.gif" />
+    <Content Include="images\emoji\qq\54.gif" />
+    <Content Include="images\emoji\qq\55.gif" />
+    <Content Include="images\emoji\qq\56.gif" />
+    <Content Include="images\emoji\qq\57.gif" />
+    <Content Include="images\emoji\qq\58.gif" />
+    <Content Include="images\emoji\qq\59.gif" />
+    <Content Include="images\emoji\qq\6.gif" />
+    <Content Include="images\emoji\qq\60.gif" />
+    <Content Include="images\emoji\qq\61.gif" />
+    <Content Include="images\emoji\qq\62.gif" />
+    <Content Include="images\emoji\qq\63.gif" />
+    <Content Include="images\emoji\qq\64.gif" />
+    <Content Include="images\emoji\qq\65.gif" />
+    <Content Include="images\emoji\qq\66.gif" />
+    <Content Include="images\emoji\qq\67.gif" />
+    <Content Include="images\emoji\qq\68.gif" />
+    <Content Include="images\emoji\qq\69.gif" />
+    <Content Include="images\emoji\qq\7.gif" />
+    <Content Include="images\emoji\qq\70.gif" />
+    <Content Include="images\emoji\qq\71.gif" />
+    <Content Include="images\emoji\qq\72.gif" />
+    <Content Include="images\emoji\qq\73.gif" />
+    <Content Include="images\emoji\qq\74.gif" />
+    <Content Include="images\emoji\qq\75.gif" />
+    <Content Include="images\emoji\qq\76.gif" />
+    <Content Include="images\emoji\qq\77.gif" />
+    <Content Include="images\emoji\qq\78.gif" />
+    <Content Include="images\emoji\qq\79.gif" />
+    <Content Include="images\emoji\qq\8.gif" />
+    <Content Include="images\emoji\qq\80.gif" />
+    <Content Include="images\emoji\qq\81.gif" />
+    <Content Include="images\emoji\qq\82.gif" />
+    <Content Include="images\emoji\qq\83.gif" />
+    <Content Include="images\emoji\qq\84.gif" />
+    <Content Include="images\emoji\qq\85.gif" />
+    <Content Include="images\emoji\qq\86.gif" />
+    <Content Include="images\emoji\qq\87.gif" />
+    <Content Include="images\emoji\qq\88.gif" />
+    <Content Include="images\emoji\qq\89.gif" />
+    <Content Include="images\emoji\qq\9.gif" />
+    <Content Include="images\emoji\qq\90.gif" />
+    <Content Include="images\emoji\qq\91.gif" />
+    <Content Include="images\emoji\tieba\1.jpg" />
+    <Content Include="images\emoji\tieba\10.jpg" />
+    <Content Include="images\emoji\tieba\11.jpg" />
+    <Content Include="images\emoji\tieba\12.jpg" />
+    <Content Include="images\emoji\tieba\13.jpg" />
+    <Content Include="images\emoji\tieba\14.jpg" />
+    <Content Include="images\emoji\tieba\15.jpg" />
+    <Content Include="images\emoji\tieba\16.jpg" />
+    <Content Include="images\emoji\tieba\17.jpg" />
+    <Content Include="images\emoji\tieba\18.jpg" />
+    <Content Include="images\emoji\tieba\19.jpg" />
+    <Content Include="images\emoji\tieba\2.jpg" />
+    <Content Include="images\emoji\tieba\20.jpg" />
+    <Content Include="images\emoji\tieba\21.jpg" />
+    <Content Include="images\emoji\tieba\22.jpg" />
+    <Content Include="images\emoji\tieba\23.jpg" />
+    <Content Include="images\emoji\tieba\24.jpg" />
+    <Content Include="images\emoji\tieba\25.jpg" />
+    <Content Include="images\emoji\tieba\26.jpg" />
+    <Content Include="images\emoji\tieba\27.jpg" />
+    <Content Include="images\emoji\tieba\28.jpg" />
+    <Content Include="images\emoji\tieba\29.jpg" />
+    <Content Include="images\emoji\tieba\3.jpg" />
+    <Content Include="images\emoji\tieba\30.jpg" />
+    <Content Include="images\emoji\tieba\31.jpg" />
+    <Content Include="images\emoji\tieba\32.jpg" />
+    <Content Include="images\emoji\tieba\33.jpg" />
+    <Content Include="images\emoji\tieba\34.jpg" />
+    <Content Include="images\emoji\tieba\35.jpg" />
+    <Content Include="images\emoji\tieba\36.jpg" />
+    <Content Include="images\emoji\tieba\37.jpg" />
+    <Content Include="images\emoji\tieba\38.jpg" />
+    <Content Include="images\emoji\tieba\39.jpg" />
+    <Content Include="images\emoji\tieba\4.jpg" />
+    <Content Include="images\emoji\tieba\40.jpg" />
+    <Content Include="images\emoji\tieba\41.jpg" />
+    <Content Include="images\emoji\tieba\42.jpg" />
+    <Content Include="images\emoji\tieba\43.jpg" />
+    <Content Include="images\emoji\tieba\44.jpg" />
+    <Content Include="images\emoji\tieba\45.jpg" />
+    <Content Include="images\emoji\tieba\46.jpg" />
+    <Content Include="images\emoji\tieba\47.jpg" />
+    <Content Include="images\emoji\tieba\48.jpg" />
+    <Content Include="images\emoji\tieba\49.jpg" />
+    <Content Include="images\emoji\tieba\5.jpg" />
+    <Content Include="images\emoji\tieba\50.jpg" />
+    <Content Include="images\emoji\tieba\6.jpg" />
+    <Content Include="images\emoji\tieba\7.jpg" />
+    <Content Include="images\emoji\tieba\8.jpg" />
+    <Content Include="images\emoji\tieba\9.jpg" />
     <Content Include="images\fire.png" />
     <Content Include="images\gallery_recommend_01.png" />
     <Content Include="images\gallery_recommend_02.png" />
@@ -461,11 +602,14 @@
     <Content Include="Views\Personal\Set.cshtml" />
     <Content Include="Views\Personal\Task.cshtml" />
     <Content Include="Views\Comment\Index.cshtml" />
+    <Content Include="Views\Public\Tan.cshtml" />
+    <Content Include="Views\News\CommentDetail.cshtml" />
+    <Content Include="Views\Personal\Fans.cshtml" />
+    <Content Include="Views\Personal\Follow.cshtml" />
+    <Content Include="Views\Plan\Post.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="images\emoji\qq\" />
-    <Folder Include="images\emoji\tieba\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
