--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -217,6 +217,7 @@
     <Content Include="images\39_7.png" />
     <Content Include="images\39_8.png" />
     <Content Include="images\39_9.png" />
+    <Content Include="images\40_8.png" />
     <Content Include="images\40.png" />
     <Content Include="images\41.png" />
     <Content Include="images\41_1.png" />
