--- a/C8.Lottery.Public/C8.Lottery.Public.csproj
+++ b/C8.Lottery.Public/C8.Lottery.Public.csproj
@@ -65,6 +65,7 @@
     <Compile Include="SmsSender.cs" />
     <Compile Include="SqlHelper.cs" />
     <Compile Include="Util.cs" />
+    <Compile Include="WebHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
