添加个人中心我的计划，修改六合彩TypeList

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -26,7 +26,7 @@
     <!--<add name="connStr" connectionString="Data Source=119.147.139.131;Initial Catalog=C8;User ID=sa;Password=sql1994;" />-->
 
 
-    <add name="connStr" connectionString="Data Source=.;Initial Catalog=C8;User ID=sa;Password=123456;" />
+    <add name="connStr" connectionString="Data Source=.;Initial Catalog=C8;User ID=sa;Password=luohongshun;" />
 
 
 
