--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -145,6 +145,7 @@
     <Content Include="css\paper.css" />
     <Content Include="css\head.css" />
     <Content Include="css\style.css" />
+    <Content Include="css\副本 style.css" />
     <Content Include="Global.asax" />
     <Content Include="images\01.png" />
     <Content Include="images\02.png" />
@@ -639,6 +640,7 @@
     <Content Include="Views\Personal\FansBangList.cshtml" />
     <Content Include="Views\Personal\Set.cshtml" />
     <Content Include="Views\Home\Open.cshtml" />
+    <Content Include="Views\Home\副本 Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
