--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -132,6 +132,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="css\c8-icon.css" />
+    <Content Include="css\Chat\chat.css" />
+    <Content Include="css\Chat\iconfont.css" />
+    <Content Include="css\Chat\iconfont.css.css" />
     <Content Include="css\dialog.css" />
     <Content Include="css\fonts\c8.svg" />
     <Content Include="css\jquery.emoji.css" />
@@ -148,6 +151,7 @@
     <Content Include="images\07.gif" />
     <Content Include="images\08.png" />
     <Content Include="images\09.png" />
+    <Content Include="images\1.png" />
     <Content Include="images\11.png" />
     <Content Include="images\12_1.png" />
     <Content Include="images\12_2.png" />
@@ -291,6 +295,7 @@
     <Content Include="images\70.png" />
     <Content Include="images\70_1.png" />
     <Content Include="images\70_2.png" />
+    <Content Include="images\bqxtb01.png" />
     <Content Include="images\bt-5.png" />
     <Content Include="images\bt-6.png" />
     <Content Include="images\c8.png" />
@@ -450,6 +455,9 @@
     <Content Include="images\grids_icon_08.png" />
     <Content Include="images\icon-collect.png" />
     <Content Include="images\icon-expand.png" />
+    <Content Include="images\icon01.png" />
+    <Content Include="images\icon02.png" />
+    <Content Include="images\icon03.png" />
     <Content Include="images\icon_chatroom_01.png" />
     <Content Include="images\icon_chatroom_02.png" />
     <Content Include="images\icon_chatroom_03.png" />
@@ -580,11 +588,13 @@
     <Content Include="css\fonts\c8.eot" />
     <Content Include="css\fonts\c8.ttf" />
     <Content Include="css\fonts\c8.woff" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\w.pubxml" />
     <None Include="Scripts\jquery-1.8.0-vsdoc.js" />
     <Content Include="js\zepto.tap.min.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
+    <Content Include="Scripts\jquery.signalR-2.2.3.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Web.config">
@@ -623,6 +633,7 @@
     <Content Include="Views\Personal\InvitationReg.cshtml" />
     <Content Include="Views\Personal\RewardRules.cshtml" />
     <Content Include="Views\Talking\Index.cshtml" />
+    <Content Include="Views\Talking\ChatRoom.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
