--- a/C8.Lottery.Portal/C8.Lottery.Portal/packages.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CryptSharpOfficial" version="2.1.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.8.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.zh-Hans" version="4.0.20710.0" targetFramework="net45" />
