--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -139,9 +139,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="css\c8-icon.css" />
-    <Content Include="css\Chat\chat.css" />
-    <Content Include="css\Chat\iconfont.css" />
-    <Content Include="css\Chat\iconfont.css.css" />
+    <Content Include="css\Chat\base.css" />
+    <Content Include="css\Chat\index.css" />
     <Content Include="css\dialog.css" />
     <Content Include="css\fonts\c8.svg" />
     <Content Include="css\jquery.emoji.css" />
@@ -309,6 +308,12 @@
     <Content Include="images\bt-5.png" />
     <Content Include="images\bt-6.png" />
     <Content Include="images\c8.png" />
+    <Content Include="images\Chat\back.png" />
+    <Content Include="images\Chat\chat_03.png" />
+    <Content Include="images\Chat\chat_06.png" />
+    <Content Include="images\Chat\chat_15.png" />
+    <Content Include="images\Chat\icon_03.png" />
+    <Content Include="images\Chat\icon_06.png" />
     <Content Include="images\default_avater.png" />
     <Content Include="images\default_usercenter_bg.png" />
     <Content Include="images\emoji\qq\1.gif" />
