--- a/C8.Lottery.Model/C8.Lottery.Model.csproj
+++ b/C8.Lottery.Model/C8.Lottery.Model.csproj
@@ -54,7 +54,7 @@
     <Compile Include="MakeMoneyTask.cs" />
     <Compile Include="News\Comment.cs" />
     <Compile Include="LotteryType.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="Expert.cs" />
     <Compile Include="LotteryRecord.cs" />
     <Compile Include="News\Gallery.cs" />
     <Compile Include="News\GalleryType.cs" />
@@ -62,6 +62,7 @@
     <Compile Include="News\News.cs" />
     <Compile Include="News\NewsType.cs" />
     <Compile Include="Plan.cs" />
+    <Compile Include="Play.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceMapping.cs" />
     <Compile Include="TalkBlackList.cs" />
