--- a/C8.Lottery.Model/C8.Lottery.Model.csproj
+++ b/C8.Lottery.Model/C8.Lottery.Model.csproj
@@ -45,13 +45,16 @@
   <ItemGroup>
     <Compile Include="AccessRecord.cs" />
     <Compile Include="BettingRecord.cs" />
+    <Compile Include="CommissionSetting.cs" />
     <Compile Include="Enum\CommentTypeEnum.cs" />
     <Compile Include="CoinRate.cs" />
     <Compile Include="Enum\LikeStatusEnum.cs" />
     <Compile Include="Enum\ResourceTypeEnum.cs" />
+    <Compile Include="Enum\TransactionTypeEnum.cs" />
     <Compile Include="Follow.cs" />
     <Compile Include="IntegralRule.cs" />
     <Compile Include="Lottery.cs" />
+    <Compile Include="LotteryCharge.cs" />
     <Compile Include="MakeMoneyTask.cs" />
     <Compile Include="News\Comment.cs" />
     <Compile Include="LotteryType.cs" />
@@ -66,6 +69,7 @@
     <Compile Include="Play.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceMapping.cs" />
+    <Compile Include="SiteSetting.cs" />
     <Compile Include="TalkBlackList.cs" />
     <Compile Include="TalkNotes.cs" />
     <Compile Include="UserInfo.cs" />
