--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -680,6 +680,7 @@
     <Content Include="Views\Personal\GetIntegralRule.cshtml" />
     <Content Include="Views\Plan\PlayRecord.cshtml" />
     <Content Include="Views\Plan\LastPlay.cshtml" />
+    <Content Include="Views\Plan\Look.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
