--- a/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Web.config
@@ -12,7 +12,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="vs:EnableBrowserLink" value="false" />
     <!--Memcached 地址配置-->
-    <add key="MemcachedServerList" value="127.0.0.1:11111" />
+    <add key="MemcachedServerList" value="127.0.0.1:11211" />
 
     <!--腾讯云万彩吧短信 地址配置-->
     <add key="sdkappid" value="1400040575" />
@@ -23,7 +23,7 @@
 
 
   <connectionStrings>
-    <!--<add name="connStr" connectionString="Data Source=119.147.139.131;Initial Catalog=C8;User ID=sa;Password=sql1994;" />-->
+    <add name="connStr" connectionString="Data Source=119.147.139.131;Initial Catalog=C8;User ID=sa;Password=sql1994;" />
 
     <!--<add name="connStr" connectionString="Data Source=.;Initial Catalog=C8;User ID=sa;Password=123456;" />-->
 
