--- a/C8.Lottery.Model/C8.Lottery.Model.csproj
+++ b/C8.Lottery.Model/C8.Lottery.Model.csproj
@@ -63,10 +63,11 @@
     <Compile Include="News\NewsType.cs" />
     <Compile Include="Plan.cs" />
     <Compile Include="Play.cs" />
+    <Compile Include="Talk\ProcessingRecords.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceMapping.cs" />
-    <Compile Include="TalkBlackList.cs" />
-    <Compile Include="TalkNotes.cs" />
+    <Compile Include="Talk\TalkBlackList.cs" />
+    <Compile Include="Talk\TalkNotes.cs" />
     <Compile Include="UserInfo.cs" />
     <Compile Include="UserTask.cs" />
   </ItemGroup>
