修复bug,修改表情包

--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -323,6 +323,60 @@
     <Content Include="images\Chat\icon_06.png" />
     <Content Include="images\default_avater.png" />
     <Content Include="images\default_usercenter_bg.png" />
+    <Content Include="images\emoji\Face\1.png" />
+    <Content Include="images\emoji\Face\10.png" />
+    <Content Include="images\emoji\Face\11.png" />
+    <Content Include="images\emoji\Face\12.png" />
+    <Content Include="images\emoji\Face\13.png" />
+    <Content Include="images\emoji\Face\14.png" />
+    <Content Include="images\emoji\Face\15.png" />
+    <Content Include="images\emoji\Face\16.png" />
+    <Content Include="images\emoji\Face\17.png" />
+    <Content Include="images\emoji\Face\18.png" />
+    <Content Include="images\emoji\Face\19.png" />
+    <Content Include="images\emoji\Face\2.png" />
+    <Content Include="images\emoji\Face\20.png" />
+    <Content Include="images\emoji\Face\21.png" />
+    <Content Include="images\emoji\Face\22.png" />
+    <Content Include="images\emoji\Face\23.png" />
+    <Content Include="images\emoji\Face\24.png" />
+    <Content Include="images\emoji\Face\25.png" />
+    <Content Include="images\emoji\Face\26.png" />
+    <Content Include="images\emoji\Face\27.png" />
+    <Content Include="images\emoji\Face\28.png" />
+    <Content Include="images\emoji\Face\29.png" />
+    <Content Include="images\emoji\Face\3.png" />
+    <Content Include="images\emoji\Face\30.png" />
+    <Content Include="images\emoji\Face\31.png" />
+    <Content Include="images\emoji\Face\32.png" />
+    <Content Include="images\emoji\Face\33.png" />
+    <Content Include="images\emoji\Face\34.png" />
+    <Content Include="images\emoji\Face\35.png" />
+    <Content Include="images\emoji\Face\36.png" />
+    <Content Include="images\emoji\Face\37.png" />
+    <Content Include="images\emoji\Face\38.png" />
+    <Content Include="images\emoji\Face\39.png" />
+    <Content Include="images\emoji\Face\4.png" />
+    <Content Include="images\emoji\Face\40.png" />
+    <Content Include="images\emoji\Face\41.png" />
+    <Content Include="images\emoji\Face\42.png" />
+    <Content Include="images\emoji\Face\43.png" />
+    <Content Include="images\emoji\Face\44.png" />
+    <Content Include="images\emoji\Face\45.png" />
+    <Content Include="images\emoji\Face\46.png" />
+    <Content Include="images\emoji\Face\47.png" />
+    <Content Include="images\emoji\Face\48.png" />
+    <Content Include="images\emoji\Face\49.png" />
+    <Content Include="images\emoji\Face\5.png" />
+    <Content Include="images\emoji\Face\50.png" />
+    <Content Include="images\emoji\Face\51.png" />
+    <Content Include="images\emoji\Face\52.png" />
+    <Content Include="images\emoji\Face\53.png" />
+    <Content Include="images\emoji\Face\54.png" />
+    <Content Include="images\emoji\Face\6.png" />
+    <Content Include="images\emoji\Face\7.png" />
+    <Content Include="images\emoji\Face\8.png" />
+    <Content Include="images\emoji\Face\9.png" />
     <Content Include="images\emoji\qq\1.gif" />
     <Content Include="images\emoji\qq\10.gif" />
     <Content Include="images\emoji\qq\11.gif" />
