--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -655,6 +655,7 @@
     <Content Include="js\luo\jquery.mCustomScrollbar.min.js" />
     <Content Include="js\luo\jquery.mousewheel-3.0.6.min.js" />
     <Content Include="js\luo\mescroll.min.js" />
+    <Content Include="js\luo\picmax.js" />
     <Content Include="js\luo\play.js" />
     <Content Include="js\opendate.js" />
     <Content Include="js\public.js" />
