--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Models\AchievementModel.cs" />
     <Compile Include="Models\ACHVModel.cs" />
     <Compile Include="Models\BetModel.cs" />
+    <Compile Include="Models\ComeOutRecordModel.cs" />
     <Compile Include="Models\CommentViewModel.cs" />
     <Compile Include="Models\FansBangListModel.cs" />
     <Compile Include="Models\InvitationRegModel.cs" />
@@ -739,6 +740,8 @@
     <Content Include="Views\Plan\PlayRecord.cshtml" />
     <Content Include="Views\Plan\LastPlay.cshtml" />
     <Content Include="Views\Plan\Look.cshtml" />
+    <Content Include="Views\Personal\TransactionRecord.cshtml" />
+    <Content Include="Views\Personal\TaskRule.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
