修改6彩规则，添加打赏页

--- a/C8.Lottery.Model/C8.Lottery.Model.csproj
+++ b/C8.Lottery.Model/C8.Lottery.Model.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CommissionSetting.cs" />
     <Compile Include="Enum\CommentTypeEnum.cs" />
     <Compile Include="CoinRate.cs" />
+    <Compile Include="Enum\CommissionTypeEnum.cs" />
     <Compile Include="Enum\LikeStatusEnum.cs" />
     <Compile Include="Enum\ResourceTypeEnum.cs" />
     <Compile Include="Enum\TransactionTypeEnum.cs" />
