--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -657,6 +657,7 @@
     <Content Include="js\luo\jquery.mousewheel-3.0.6.min.js" />
     <Content Include="js\luo\mescroll.min.js" />
     <Content Include="js\luo\picmax.js" />
+    <Content Include="js\luo\plan.js" />
     <Content Include="js\luo\play.js" />
     <Content Include="js\opendate.js" />
     <Content Include="js\public.js" />
@@ -740,6 +741,7 @@
     <Content Include="Views\Plan\PlayRecord.cshtml" />
     <Content Include="Views\Plan\LastPlay.cshtml" />
     <Content Include="Views\Plan\Look.cshtml" />
+    <Content Include="Views\Plan\Tip.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
