昵称敏感字过滤

--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -176,6 +176,7 @@
     <Content Include="images\12_2.png" />
     <Content Include="images\12_3.png" />
     <Content Include="images\13.png" />
+    <Content Include="images\13_1.png" />
     <Content Include="images\14.png" />
     <Content Include="images\15.png" />
     <Content Include="images\16_1.png" />
