聊天功能提交

--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -147,7 +147,12 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="css\c8-icon.css" />
     <Content Include="css\Chat\base.css" />
+    <Content Include="css\Chat\chat.css" />
+    <Content Include="css\Chat\common.css" />
+    <Content Include="css\Chat\dolist.css" />
     <Content Include="css\Chat\index.css" />
+    <Content Include="css\Chat\libs\CSSRESET.css" />
+    <Content Include="css\Chat\libs\swiper.min.css" />
     <Content Include="css\dialog.css" />
     <Content Include="css\fonts\c8.svg" />
     <Content Include="css\jquery.emoji.css" />
@@ -315,12 +320,14 @@
     <Content Include="images\bt-5.png" />
     <Content Include="images\bt-6.png" />
     <Content Include="images\c8.png" />
-    <Content Include="images\Chat\back.png" />
-    <Content Include="images\Chat\chat_03.png" />
-    <Content Include="images\Chat\chat_06.png" />
-    <Content Include="images\Chat\chat_15.png" />
-    <Content Include="images\Chat\icon_03.png" />
-    <Content Include="images\Chat\icon_06.png" />
+    <Content Include="images\Chat\chat_pic.jpg" />
+    <Content Include="images\Chat\icon_back.png" />
+    <Content Include="images\Chat\icon_face.png" />
+    <Content Include="images\Chat\icon_pic.png" />
+    <Content Include="images\Chat\icon_tail_l.png" />
+    <Content Include="images\Chat\icon_tail_r.png" />
+    <Content Include="images\Chat\pic_profile_1.png" />
+    <Content Include="images\Chat\pic_profile_2.png" />
     <Content Include="images\default_avater.png" />
     <Content Include="images\default_usercenter_bg.png" />
     <Content Include="images\emoji\Face\1.png" />
@@ -670,10 +677,6 @@
     <Content Include="css\fonts\c8.eot" />
     <Content Include="css\fonts\c8.ttf" />
     <Content Include="css\fonts\c8.woff" />
-    <Content Include="css\fonts\icomoon.eot" />
-    <Content Include="css\fonts\icomoon.svg" />
-    <Content Include="css\fonts\icomoon.ttf" />
-    <Content Include="css\fonts\icomoon.woff" />
     <None Include="Properties\PublishProfiles\C8 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\C8 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
