--- a/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/C8.Lottery.Portal.csproj
@@ -280,6 +280,8 @@
     <Content Include="images\47_3.png" />
     <Content Include="images\47_4.png" />
     <Content Include="images\47_5.png" />
+    <Content Include="images\47_6.png" />
+    <Content Include="images\47_7.png" />
     <Content Include="images\48.png" />
     <Content Include="images\49.png" />
     <Content Include="images\50.png" />
