新增动态消息，系统消息，修改个人中心系统消息

--- a/C8.Lottery.Model/C8.Lottery.Model.csproj
+++ b/C8.Lottery.Model/C8.Lottery.Model.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Enum\LikeStatusEnum.cs" />
     <Compile Include="Enum\ResourceTypeEnum.cs" />
     <Compile Include="Enum\TransactionTypeEnum.cs" />
+    <Compile Include="Enum\UserInternalMessageTypeEnum.cs" />
     <Compile Include="Follow.cs" />
     <Compile Include="IntegralRule.cs" />
     <Compile Include="Lottery.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Talk\TalkNotes.cs" />
     <Compile Include="SiteSetting.cs" />
     <Compile Include="UserInfo.cs" />
+    <Compile Include="UserInternalMessage.cs" />
     <Compile Include="UserTask.cs" />
   </ItemGroup>
   <ItemGroup>
